hphp/hack/test/typecheck/expression_trees_not_virtualize_functions/postfix_minus_minus_error1.php.exp
File "postfix_minus_minus_error1.php", line 7, characters 14-14:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
File "postfix_minus_minus_error1.php", line 7, characters 14-14:
You cannot use this syntax with an increment or decrement statement. (Parsing[1002])
