hphp/hack/test/typecheck/expression_trees_not_virtualize_functions/postfix_minus_minus_error1.php
<?hh

<<file: __EnableUnstableFeatures('expression_trees')>>

function test(): void {
  // This doesn't work in Hack proper. Just making sure this doesn't work here
  ExampleDsl`1--`;
}
